Closed
Bug 1408057
Opened 8 years ago
Closed 8 years ago
JSS throws ObjectNotFoundException without message
Categories
(JSS Graveyard :: Library, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: edewata, Assigned: edewata)
Details
Attachments
(3 files, 1 obsolete file)
20.83 KB,
patch
|
jmagne
:
review+
|
Details | Diff | Splinter Review |
2.63 KB,
patch
|
jmagne
:
review+
|
Details | Diff | Splinter Review |
2.68 KB,
patch
|
jmagne
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:55.0) Gecko/20100101 Firefox/55.0
Build ID: 20170901071738
Steps to reproduce:
Currently if JSS cannot find a certificate in the NSS database it will throw an ObjectNotFoundException without any message. To help troubleshooting JSS should include the certificate nickname in the exception message.
Assignee | ||
Comment 1•8 years ago
|
||
Assignee | ||
Comment 2•8 years ago
|
||
Assignee | ||
Comment 3•8 years ago
|
||
Assignee | ||
Updated•8 years ago
|
Attachment #8922932 -
Flags: review?(jmagne)
Assignee | ||
Updated•8 years ago
|
Attachment #8922933 -
Flags: review?(jmagne)
Assignee | ||
Updated•8 years ago
|
Attachment #8922934 -
Flags: review?(jmagne)
Assignee | ||
Comment 4•8 years ago
|
||
Patch updated per jmagne's feedback:
* merged "message" variable declaration and initialization
* replaced PR_Free() with PR_smprintf_free()
Attachment #8922932 -
Attachment is obsolete: true
Attachment #8922932 -
Flags: review?(jmagne)
Attachment #8922973 -
Flags: review?(jmagne)
Attachment #8922973 -
Flags: review?(jmagne) → review+
Attachment #8922933 -
Flags: review?(jmagne) → review+
Attachment #8922934 -
Flags: review?(jmagne) → review+
Assignee | ||
Comment 5•8 years ago
|
||
Updated•8 years ago
|
Assignee: glenbeasley → edewata
Status: UNCONFIRMED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•