Added certificate nickname into ObjectNotFoundException message. The code that generates ObjectNotFoundException has been modified to include the certificate nickname to help troubleshooting.

https://bugzilla.mozilla.org/show_bug.cgi?id=1408057